--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,14 @@ services:
       - '5050:80'
     depends_on:
       - db
+  redis:
+    container_name: cache
+    image: redis
+    ports:
+      - 6379:6379
+    volumes:
+      - redis:/data # Gắn volume vào thư mục lưu trữ dữ liệu của Redis
+
+volumes:
+  redis:
+    driver: local # Sử dụng driver local để lưu trữ volume
